--- a/block-BHaaaf/index.html
+++ b/block-BHaaaf/index.html
@@ -1,9 +1,26 @@
-<!-- 
-  ### Create a simple page with an external stylesheet.
-
-  TODO:
-    - Create a simple page `(index.html)` with one heading following with a long paragraph.
-    - Create an external stylesheet `(style.css)` and change the color and font size of the heading and paragraph.
-    - Also, change the background color of the body.
-    - Use different selectors to select different elements.
--->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1  id="heading">
+            HELLO WORLD
+        </h1>
+    </header>
+    <section>
+        <p>THIS IS WEB PAGE 
+        <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, repellat cumque? Ipsum earum minima minus accusantium alias sed, quia aperiam tenetur tempora incidunt similique reprehenderit quas repellendus aliquam vitae omnis!
+        </p>
+        <p class="p2">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium autem est voluptates voluptatibus amet consequatur laudantium, nisi accusamus numquam fuga, odio culpa quidem porro deleniti totam quis alias nihil. Iure!
+        </p>
+        <p id="p3">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias unde, assumenda aut officiis sit odit beatae porro voluptates reiciendis sequi ipsa natus accusamus culpa dolorum nostrum vero totam laudantium. Laboriosam!
+        </p>
+    </section>
+</body>
+</html>
